--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,15 @@
 [build]
-  command = "npm test"
   publish = "."
+  command = "npm test"
+
+[[redirects]]
+  from = "/index"
+  to = "/index.html"
+  status = 301
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
