--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "istani.org",
   "version": "1.0.0",
   "private": true,
+  "description": "",
   "scripts": {
     "test": "node test.js"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
