chore: limit Vercel glob to site assets

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "**/*", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.txt", "use": "@vercel/static" },
+    { "src": "*.xml", "use": "@vercel/static" }
   ],
   "github": { "enabled": true },
   "redirects": [
