--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,6 @@
+# Next.js on Netlify: native support
 [build]
-  base = "."
-  publish = "."
+  command = "npm run build"
+  publish = ".next"
 
-[[redirects]]
-  from = "/index"
-  to = "/index.html"
-  status = 301
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+# Do NOT add the old @netlify/plugin-nextjs manually.
