--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "build": "next build",
     "test": "echo \"No tests specified\""
   },
   "keywords": [],
