chore: stub build script

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,4 @@
+# Static site deployment
 [build]
-  base = "."
+  command = "npm run build"
   publish = "."
-
-[[redirects]]
-  from = "/index"
-  to = "/index.html"
-  status = 301
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
