--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
-# Next.js on Netlify: native support
 [build]
   command = "npm run build"
-  publish = ".next"
-
-# Do NOT add the old @netlify/plugin-nextjs manually.
+  publish = "."
