--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
-# Next.js on Netlify: native support
+# Static site deployment on Netlify
 [build]
-  command = "npm run build"
-  publish = ".next"
+  publish = "."
 
 # Do NOT add the old @netlify/plugin-nextjs manually.
